Updated language on client status page

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -21,7 +21,7 @@ en:
       title: "Your Monthly Budget"  
       description: "Fill this out as best you can. If there are any changes you would like to make, simply click on the number and make them." 
       debts: "Debts"
-      debts_description: "lease keep in mind, these are monthly debts. You will be discussing accumulated debt with your counselor soon. If you have a bill (ie. water) that comes every two months, please average it out to one month."
+      debts_description: "lease keep in mind, these are monthly debts. You will be discussing accumulated debt with your counselor soon. If you have a bill (i.e. water) that comes every two months, please average it out to one month."
       total: "Your totals"
       income: "Income"
       assets: "Assets"
@@ -112,7 +112,7 @@ en:
       foreclosure: "foreclosure: "
       title: "Foreclosure Application:"
       description: "You've taken the first step. Once this application is submitted, you will be contacted by one of LUCHA's counselors for further guidance."
-      currently_foreclosed: "Currently Foreclosed"
+      currently_foreclosed: "Foreclosure Status"
       originating_lender: "Originating Lender"
       original_loan_number: ":Original Loan Number"
       servicer: "Servicer"
